[package]
name = "tabbed-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tabbed_rs"
path = "src/lib.rs"

[dependencies]

# render
x11rb-protocol= { version = "0.11", features = ["serde"] }
x11rb = { version = "0.11", features = ["allow-unsafe-code"] }
cairo-rs = { version = "0.17", features = ["xcb"] }
fork = "0.1.20"

# cli
clap = { version = "4.1", features = ["derive"] }
clap-num = "*"
nonempty = "0.8"

# config
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4"
#toml = { version = "0.7", features = ["display"] }
